# relation-stores

./: .classpath  .cvsignore  .project  AUTHORS  ChangeLog  Makefile.am  configure.ac  package  reconf  relation-stores.pc.in
lib/: .cvsignore  Makefile.am  ParsedRStore.c  ParsedRStore.h  ParsedRStore_dict.c  ParsedRStore_dict.h  RStore-utils.h  RStore.c  RStore.h  RStore_dict.c  RStore_dict.h  lift.c  lower.c
script/: .cvsignore  Makefile.am
utils/: Makefile.am
utils/lift-rstore/: Makefile.am  lift-rstore.c  lift-rstore.h  lift-rstore.isrc  main.c
utils/lower-rstore/: Makefile.am  lower-rstore.c  lower-rstore.h  lower-rstore.idef.src  lower-rstore.tif.c  main.c
